--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -4,11 +4,13 @@ spring:
   h2:
     console:
       enabled: true
+
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
     username: sa
     password: password
+
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     defer-datasource-initialization: true
@@ -16,3 +18,6 @@ spring:
     properties:
       hibernate:
         format_sql: true
+  jackson:
+    serialization:
+      FAIL_ON_EMPTY_BEANS: false
